<resources>
    <string name="app_name">Japan History Quiz: Meiji Restoration</string>
    <string name="question_1">1. The year of Meiji Restoration:</string>
    <string name="question_2">2. The real name of Emperor Meiji</string>
    <string name="question_3">3. Which three regions had supported the Emperor during Boshin War:</string>
    <string name="question_4">4. Before 1868 Tokyo used to be called:</string>
    <string name="question_5">5. The Constitution of the Empire of Japan was enacted in:</string>
    <string name="_1868">1868</string>
    <string name="_1754">1754</string>
    <string name="_1873">1873</string>
    <string name="choshu">Choshu</string>
    <string name="satsuma">Satsuma</string>
    <string name="tosa">Tosa</string>
    <string name="aizu">Aizu</string>
    <string name="point_4">4 point</string>
    <string name="kyoto">Kyoto</string>
    <string name="edo">Edo</string>
    <string name="kamakura">Kamakura</string>
    <string name="point_1">1 point</string>
    <string name="point_2">2 point</string>
    <string name="point_5">5 point</string>
    <string name="_1890">1890</string>
    <string name="_1895">1895</string>
    <string name="button_text">Check results!</string>
</resources>
